--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
